--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Build app
         run: npm run build
 
+      # 🧩 Chuẩn bị thư mục build trên VPS
       - name: Prepare VPS folder
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -41,6 +42,7 @@ jobs:
             mkdir -p /home/${{ vars.VPS_USER }}/apps/${{ vars.PROJECT_NAME }}/build
             rm -rf /home/${{ vars.VPS_USER }}/apps/${{ vars.PROJECT_NAME }}/build/*
 
+      # 🧠 Upload đúng nội dung (fix lỗi build/build)
       - name: Upload build to VPS
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -51,6 +53,7 @@ jobs:
           source: "build/*"
           target: "/home/${{ vars.VPS_USER }}/apps/${{ vars.PROJECT_NAME }}/build"
 
+      # 🔁 Restart PM2 và serve đúng thư mục build
       - name: Restart PM2
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -62,5 +65,6 @@ jobs:
             cd /home/${{ vars.VPS_USER }}/apps/${{ vars.PROJECT_NAME }}
             pm2 stop ${{ vars.PROJECT_NAME }} || true
             pm2 delete ${{ vars.PROJECT_NAME }} || true
-            pm2 start npx --name ${{ vars.PROJECT_NAME }} -- serve -s build -l ${{ vars.PROJECT_PORT }} --no-clipboard
+            # ✅ Dùng đường dẫn tuyệt đối để tránh lỗi serve sai thư mục
+            pm2 start "npx serve -s /home/${{ vars.VPS_USER }}/apps/${{ vars.PROJECT_NAME }}/build -l ${{ vars.PROJECT_PORT }} --no-clipboard" --name ${{ vars.PROJECT_NAME }}
             pm2 save
